# plaquette

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: coverage.yml
analysis_e/: all.html  constant.BETA.html  constant.DIRECTORY.html  constant.DT.html  fn.main.html  index.html  sidebar-items.js
analysis_eb_2/: all.html  constant.BETA.html  constant.DIRECTORY.html  constant.DT.html  constant.FFT_RESOLUTION_SIZE.html  constant.LATTICE_DIM.html  constant.MAX_W.html  constant.PLOT_SUB_DIR.html  constant.SIZE.html  fn.get_max_min.html  fn.get_step_and_max.html  fn.main.html  fn.plot_fft_all.html  fn.plot_fft_eb_err_norm.html  fn.plot_fft_one.html  index.html  sidebar-items.js  static.NUMBER_OF_MEASUREMENT.html
corr_b/: all.html  constant.BETA.html  constant.DIRECTORY.html  constant.DT.html  constant.FFT_RESOLUTION_SIZE.html  constant.INTEGRATOR.html  constant.LATTICE_DIM.html  constant.LATTICE_SIZE.html  constant.SEED.html  fn.main.html  fn.main_cross_with_e.html  fn.measure.html  index.html  sidebar-items.js  static.NUMBER_OF_MEASUREMENT.html  type.ResultMeasure.html
cross_check_d3/: all.html  constant.BETA.html  constant.HIGH_PT.html  constant.LOW_PT.html  constant.NUMBER_OF_DATA.html  fn.get_values.html  fn.get_vect_dim.html  fn.main.html  fn.main_cross_check_volume.html  index.html  sidebar-items.js
cross_check_d3_2/: all.html  constant.BETA.html  constant.DIR.html  constant.N_ARRAY.html  constant.SEED.html  fn.get_values.html  fn.main.html  fn.main_cross_check_volume.html  index.html  sidebar-items.js
cross_check_d3_analysis/: all.html  constant.BETA.html  constant.BOOSTRAP_NUMBER_OF_TIMES.html  constant.N_ARRAY.html  constant.SEED.html  enum.ErrorPlot.html  fn.main.html  fn.plot_data.html  fn.read_file.html  fn.statistical_boot_strap_mean.html  fn.statistical_boot_strap_method_block.html  fn.statistical_boot_strap_method_individual.html  fn.write_to_file_csv.html  index.html  sidebar-items.js  type.DataComputed.html
cross_check_d3_analysis_2/: all.html  constant.BETA.html  constant.BOOSTRAP_NUMBER_OF_TIMES.html  constant.DIR.html  constant.N_ARRAY.html  constant.SEED.html  enum.ErrorPlot.html  fn.main.html  fn.plot_data.html  fn.read_file.html  fn.statistical_boot_strap_mean.html  fn.statistical_boot_strap_method_block.html  fn.statistical_boot_strap_method_individual.html  fn.write_to_file_csv.html  index.html  sidebar-items.js  type.DataComputed.html
cross_check_d4/: all.html  fn.main.html  fn.main_scan_beta.html  index.html  sidebar-items.js
cross_check_e/: all.html  constant.BETA.html  constant.DIRECTORY.html  constant.DT.html  constant.FFT_RESOLUTION_SIZE.html  constant.INTEGRATOR.html  constant.LATTICE_DIM.html  constant.LATTICE_SIZE.html  constant.SEED.html  fn.main.html  fn.main_cross_with_e.html  fn.measure.html  index.html  static.NUMBER_OF_MEASUREMENT.html  type.ResultMeasure.html
plaquette/: all.html  index.html  sidebar-items.js
sim_e_and_b/: all.html  constant.BETA.html  constant.DIRECTORY.html  constant.DT.html  constant.FFT_RESOLUTION_SIZE.html  constant.INTEGRATOR.html  constant.LATTICE_DIM.html  constant.LATTICE_SIZE.html  constant.SEED.html  fn.main.html  fn.main_cross_with_e.html  fn.measure.html  fn.plot_fft.html  index.html  sidebar-items.js  static.NUMBER_OF_MEASUREMENT.html  type.ResultMeasure.html
sim_e_and_b_2/: all.html  constant.BETA.html  constant.DIRECTORY.html  constant.DT.html  constant.FFT_RESOLUTION_SIZE.html  constant.INTEGRATOR.html  constant.LATTICE_DIM.html  constant.LATTICE_SIZE.html  constant.SEED.html  fn.main.html  fn.main_cross_with_e.html  fn.measure.html  fn.plot_fft.html  index.html  sidebar-items.js  static.NUMBER_OF_MEASUREMENT.html  type.ResultMeasure.html
sim_wilson_loop/: all.html  constant.BETA.html  constant.DIRECTORY.html  constant.DT.html  constant.INTEGRATOR.html  constant.LATTICE_DIM.html  constant.LATTICE_SIZE.html  constant.MAXT_IME.html  constant.SEED.html  constant.SPACING.html  constant.SPACING_LEN.html  fn.main.html  fn.main_sim.html  fn.measure.html  index.html  sidebar-items.js  static.NUMBER_OF_MEASUREMENT.html  type.ResultMeasure.html
simulation-bin/: Cargo.toml
simulation-bin/src/: main.rs
simulation_bin/: all.html  constant.BETA.html  constant.DIM_USE.html  constant.NB_OF_PTS.html  fn.generate_state_with_logs.html  fn.main.html  fn.sim_dmh.html  fn.sim_dmh_hmc.html  fn.sim_hmc.html  fn.sim_mh.html  fn.simulate_loop_with_input.html  fn.simulate_with_log_subblock.html  index.html  sidebar-items.js
src/: analysis_e.rs  analysis_eb_2.rs  config.rs  config_scan.rs  corr_b.rs  cross_check_d3.rs  cross_check_d3_2.rs  cross_check_d3_analysis.rs  cross_check_d3_analysis_2.rs  cross_check_d4.rs  cross_check_e.rs  io.rs  lib.rs  observable.rs  plot_corr_e.rs  sim.rs  sim_e_and_b.rs  sim_e_and_b_2.rs  sim_wilson_loop.rs
(+114 files in other folders)
