[package]
name = "plaquette"
version = "0.0.0"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ABouttefeux/plaquette"
categories = ["Science", "Simulation"]
publish = false


[dependencies]
nalgebra = { version = "0.26.2", features = ["serde-serialize"] }
lattice-qcd-rs = {git = "https://github.com/ABouttefeux/lattice-qcd-rs", branch = "develop"}
rustfft = "5.0.0"
plotters = "0.3.0"
csv = "1.1.6"
serde = { version = "1.0.117", features = ["derive"] }
once_cell = "1.7.2"
indicatif = { version = "0.15", features = ["rayon"] }


[profile.release]
#codegen-units = 1
#lto = true


[[bin]]
name = "analysis_e"
path = "src/analysis_e.rs"
