[package]
name = "plaquette"
version = "0.0.0"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ABouttefeux/plaquette"
categories = ["Science", "Simulation"]
publish = false


[dependencies]
lattice-qcd-rs = {git = "https://github.com/ABouttefeux/lattice-qcd-rs", branch = "develop"}
nalgebra = { version = "0.26.2", features = ["serde-serialize"] }
rand = "0.8.3"
rand_distr = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.0"
csv = "1.1.6"
indicatif = { version = "0.15", features = ["rayon"] }
plotters = "0.3.0"
rayon = "1.5"
serde_json = "1.0"
rand_xoshiro = { version = "0.6", features = ["serde1"] }
crossbeam = "0.8.0"
rustfft = "5.0.0"
console = "0.14"
plotter_backend_text = { version = "0.0.0", git = "https://github.com/ABouttefeux/plotter_backend_text", branch = "develop" }
once_cell = "1.7.2"


[profile.release]
codegen-units = 1
lto = true


[[bin]]
name = "analysis_e"
path = "src/analysis_e.rs"

[[bin]]
name = "cross_check_d4"
path = "src/cross_check_d4.rs"

[[bin]]
name = "cross_check_d3"
path = "src/cross_check_d3.rs"

[[bin]]
name = "cross_check_e"
path = "src/cross_check_e.rs"

[[bin]]
name = "corr_b"
path = "src/corr_b.rs"

[[bin]]
name = "cross_check_d3_analysis"
path = "src/cross_check_d3_analysis.rs"

[[bin]]
name = "sim_e_and_b"
path = "src/sim_e_and_b.rs"

[[bin]]
name = "sim_e_and_b_2"
path = "src/sim_e_and_b_2.rs"

[[bin]]
name = "cross_check_d3_2"
path = "src/cross_check_d3_2.rs"

[[bin]]
name = "cross_check_d3_analysis_2"
path = "src/cross_check_d3_analysis_2.rs"

[[bin]]
name = "sim_wilson_loop"
path = "src/sim_wilson_loop.rs"
