[package]
name = "simulation-bin"
version = "0.2.0"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
edition = "2018"
publish = false


[dependencies]
indicatif = "0.16"
nalgebra = "0.26"
rand = "0.8.5"
rand_distr = "0.4.3"
lattice-qcd-rs = {git = "https://github.com/ABouttefeux/lattice-qcd-rs", branch = "develop"}
dialoguer = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand_xoshiro = { version = "0.6", features = ["serde1"] }
rayon = "1.5"
